2005-07-22  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>             Laurent GUERBY  <laurent@guerby.net>

PR tree-optimization/22336
        * function.c (record_block_change): Check for
        cfun->ib_boundaries_block.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@102272 138bc75d-0d04-0410-961f-82ee72b054a4